API ChangeLog	(see the ChangeLog in each 'apps' directory for
		app specific changes


09-Nov-2002	Troy A. Griffitts <scribe@crosswire.org>
	Updated ICU headers and Thai transliterator per
		Steven Loomis' recommendations.

29-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added SWModule *SWMgr::getModule(const char *modName);
	Added Terry Biggs' patch to htmlref filters to
		more consistently deal with strongs numbers

23-Oct-2002	Daniel Glassey <dglassey@crosswire.org>
	Some base work for installmgr on classes to 
		manage mods.d


* Release 1.5.5 *

22-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Updated hu locale submitted from Mentler Gyula
	Fixed bug in Book parsing that took first matching
		book, not best matching book.
	Added VCL autoconf/automake files and updated to
		compile on gcc 3.2

21-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Fixed ListKey bugs dealing with TOP and BOTTOM and
		added at least an attempt to position the
		current element key on ListKey::setText

20-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added optimizations for ListKey persistent keys
		in VerseKey drivers

09-Oct-2002	Daniel Glassey <dglassey@crosswire.org>
	Add debian directory so you can build debs from cvs

* Release 1.5.4a *

07-Oct-2002	Troy A. Griffitts <scribe@crosswire.org>
	Fixed rawFilter bug where entrySize was being passed
		instead of maxBufferSize.  This problem caused 
		a number of problems with the engine.
	Applied a few of Franklin Bratcher's critical patches
		to diatheke.

01-Oct-2002	Daniel Glassey <dglassey@crosswire.org>
	Work on sword swig perl binding
	Change sword to use a sword namespace
	Fix to build with gcc3.2 again after yesterday

30-Sep-2002	Daniel Glassey <dglassey@crosswire.org>
	Remove using namespace std from all headers

28-Sep-2002	Troy A. Griffitts <scribe@crosswire.org>
	Added SWModule::Index and SWCom and SWText impls


* Release 1.5.4 *

25-Sep-2002     Troy A. Griffitts <scribe@crosswire.org>